@@ -11,6 +11,7 @@ A......... [ZBXNEXT-1189] implemented the "selectTrigger", "selectParentDependen
 ..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)
 
 Bug fixes:
+..F....... [ZBX-4960] fixed LDAP frontend messages, fixed message in latest data (Vedmak)
 ..F....... [ZBX-4920] fixed templates from 1.8 xml are dependent on 'hosts' rules (Vedmak)
 ...G...PS. [ZBX-4942] do not send prototypes for active agent to process (dimir)
 ....I..PS. [ZBX-4941] added default DBHost configuration parameter value "localhost" (dimir)
